--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -47,6 +47,7 @@
 
     function drawMap(position, triangleCoords) {
 
+        //TODO calculate zoom
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 10,
             center: position
